@@ -1,5 +1,6 @@
 package com.serotonin.m2m2.db;
 
+import java.io.File;
 import java.sql.SQLException;
 import java.util.List;
 
@@ -63,5 +64,16 @@ public class PostgresProxy extends BasePooledProxy {
     @Override
     protected String getLimitDelete(String sql, int chunkSize) {
         return sql;
+    }
+    
+    @Override
+    public File getDataDirectory() {
+    	return null; //TODO 
+    	
+    }
+    
+    @Override
+    public Long getDatabaseSizeInBytes(){
+    	return null;
     }
 }
