@@ -24,6 +24,7 @@
 * Fixed bug where PointHierarchy Importer was running and failing silently on every JSON Import
 * Changed Point Value CSV Export format to match Excel export format
 * Fix to Numeric Point Wrapper's getStats method to correctly compute the end value for the period.
+* Improved database size reporting on system settings page
 
 
 *Version 2.4.3*
